2008-09-05  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Make the command PLUGIN_LIST send OIDs instead of old IDs.
	Make the PLUGIN_INFO command be interpreted with OIDs
	instead of IDs.

	* openvasd/comm.c (send_plug_info): Changed behaviour
	that in case there is no OID, the plugin is not sent
	and instead a log message is issued. Previously the ID "1"
	was applied.
	Send OID instead of old ID.
	(plugin_send_infos): Now takes char * oid as second parameter
	instead of int id.

	* openvasd/comm.h: Changed proto for plugin_send_infos accordingly.

	* openvasd/ntp_11.c (ntp_11_parse_input): Call plugin_send_infos
	with its new API.

2008-09-09  Michael Wiegand <michael.wiegand@intevation.de>

	Adding preliminary support for OVAL definitions. Second step for change
	request #13 (Integrating the OVAL interpreter ovaldi into OpenVAS
	Server) (http://www.openvas.org/openvas-cr-13.html)

	* openvasd/oval_plugins.c: First usable proof-of-concept integration of
	OVAL definitions into OpenVAS.

2008-09-08  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/comm.c (extract_extensions): Removed superfluous else that
	broke compilation.

2008-09-05  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Making protocol extension "timestamps" standard.

	* openvasd/ntp_11.c (__ntp_1x_timestamp_scan,
	__ntp_1x_timestamp_scan_host): Removed conditional
	for timestamps.

	* openvasd/comm.c (extract_extensions): Removed conditional
	for "timestamps", it is standard now.

	* doc/otp_specification_10.txt: Updated to described
	that protocol extension "timestamps" has been made standard.

2008-09-02  Michael Wiegand <michael.wiegand@intevation.de>

	* openvas-services: Fixed changes from rev 83 that caused the server to
	not report the appropriate port for the service when an open port 1241
	was detected.

2008-09-01  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Making protocol extension "plugins_version", "plugins_cve_id",